replace basi values in config

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-url: https://y7kim.github.io
-baseurl: /agency-jekyll-theme/
+url: https://foss.wales
+baseurl: /
 
 # Site settings
-title: Awesome Title
-email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+title: FOSS WALES
+email: hello-website@foss.wales
+description: "Meet open-soure enthusiasts in Wales, create share and live a life of free software. Join us to create the free Wales of tomorrow with the technology of today!"
 
 
 # Team names, titles and social links
@@ -45,20 +45,21 @@ people:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com/jekyllrb
+    url: 
   - title: facebook
     url:
   - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
+    url: 
   - title: bitbucket 
-    url: http://bitbucket.org/jekyll
+    url: 
   - title: github
-    url: http://github.com/jekyll
+    url: http://github.com/foss-wales
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: FOSS Wales
+  - line: Wernlas, Cwmdy, Talley, Llandeilo
+  - line: Carmarthenshire, Wales, SA19 7EE, United Kingdom
 
 # Build settings
 markdown: kramdown
