--- a/_config.yml
+++ b/_config.yml
@@ -44,14 +44,14 @@ people:
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: twitter
-    url: 
-  - title: facebook
-    url:
-  - title: stack-overflow
-    url: 
-  - title: bitbucket 
-    url: 
+#  - title: twitter
+#    url: 
+#  - title: facebook
+#    url:
+#  - title: stack-overflow
+#    url: 
+#  - title: bitbucket 
+#    url: 
   - title: github
     url: http://github.com/foss-wales
 
